[package]
name = "namesilo-dyndns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
env_logger = "0.10.0"
futures = "0.3.0"
log = "0.4.18"
regex = "1"
reqwest = "0.11.18"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6.0"
tokio = { version = "1.28.2", features = ["full"] }
toml = "0.7.4"